Add button to abandon session so data appears in Experience Profile immediately

--- a/CustomTimelineEra/Views/Layouts/Default.cshtml
+++ b/CustomTimelineEra/Views/Layouts/Default.cshtml
@@ -28,6 +28,14 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">Home</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active">
+            @using (Html.BeginForm("AbandonSession", "Session", FormMethod.Post))
+            {
+              <button type="submit" class="btn btn-warning navbar-btn">Abandon Session</button>
+            }
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
