Show alert when session is abandoned

--- a/CustomTimelineEra/Views/Layouts/Default.cshtml
+++ b/CustomTimelineEra/Views/Layouts/Default.cshtml
@@ -40,6 +40,8 @@
     </div>
   </nav>
 
+  @Html.Action("Alert", "Alert")
+
   <div class="container">
     <div>
       <h1>@Html.Sitecore().Field("title")</h1>
