Add "Outcomes Panel" rendering to trigger outcomes in xDB

--- a/CustomTimelineEra/Views/Layouts/Default.cshtml
+++ b/CustomTimelineEra/Views/Layouts/Default.cshtml
@@ -44,8 +44,7 @@
 
   <div class="container">
     <div>
-      <h1>@Html.Sitecore().Field("title")</h1>
-      <p class="lead">@Html.Sitecore().Field("text")</p>
+      @Html.Sitecore().Placeholder("main")
     </div>
   </div>
 
