--- a/CustomTimelineEra/Views/Layouts/Default.cshtml
+++ b/CustomTimelineEra/Views/Layouts/Default.cshtml
@@ -26,6 +26,11 @@
           <a class="nav-link" href="/">Home</a>
         </li>
       </ul>
+      @using (Html.BeginForm("IdentifyContact", "Contact", FormMethod.Post, new { @class = "form-inline my-2 my-lg-0" }))
+      {
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Identify Contact</button>
+      }
+      &nbsp;
       @using (Html.BeginForm("AbandonSession", "Session", FormMethod.Post, new { @class = "form-inline my-2 my-lg-0" }))
       {
         <button class="btn btn-danger my-2 my-sm-0" type="submit">Abandon Session</button>
